      unknown use flag is accessed in the recipe.
    * Package builds now create relative changesets for components instead
      of absolute changesets, reducing the size of the upload to the
      repository (CNY-912)
    * The download code in cvc now accepts cookies.  This is required
      to download files from Colabnet sites. (CNY-321)

  o Bugfixes:
    * Files added in both the repository and locally with cvc now give an
      error message on update rather than corrupting the CONARY file (CNY-1024)
    * Adding a file locally and then merging that file from upstream now
      causes an error as expected (it would traceback before). (CNY-1021)
    * Files added in both the repository and locally with cvc now give
      an error message on update rather than corrupting the CONARY
      file (CNY-1024)
    * Adding a file locally and then merging that file from upstream
      now causes an error as expected (it would traceback
      before). (CNY-1021)
    * Empty groups will not traceback if resolveDependencies is True --
      they will display an error message as expected. (CNY-1030)
    * Specifying a bad protocol in a repositoryMap entry (a protocol
      other than http or https) no longer causes an unhandled
      exception. (CNY-932)

Changes in 1.0.37:
  o Bugfixes:
    * A warning message produced when attempting to retrieve a OpenPGP
      key has been fixed.  The warning was introduced in CNY-589.

Changes in 1.0.36:
  o Client Changes:
    * The usage message displayed when running "conary" or "cvc" has
      been simplified and improved. (CNY-560)
    * When choosing how to match up troves with the same name, conary now
      takes paths into account, if there's a choice to make between matching
      up two old troves that are otherwise equivalent with a new trove, conary
      will choose the one that shares paths with the new trove. (CNY-819)
    * Conary will now allow "conary migrate --info" and "conary migrate